--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -29,7 +29,7 @@
 \maketitle
 
 \begin{abstract}
-In this paper, we explore different mathematical approaches in Minesweeper like computational algorithms, NP-Complexity, and matrix analysis. In the processes, I present strategies to satisfy computational complex algorithms such as heuristic h-neighbor adjacent.
+In this paper, we explore different mathematical approaches in Minesweeper like computational algorithms, NP-Complexity, and matrix analysis. In the processes, I present concepts like Gauss Elimination and the formal NP definition. 
 \end{abstract}
 
 
